--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -14,17 +14,21 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a href="#" class="nav-link">Lorem</a>
-            </li>
-            {% block menu %}{% endblock %}
-        </ul>
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                {% if user.is_authenticated %}
+                    <li class="nav-item"><a href="{% url 'accounts:logout' %}" class="nav-link">Log Out</a></li>
+                {% else %}
+                    <li class="nav-item"><a href="{% url 'accounts:login' %}" class="nav-link">Log In</a></li>
+                {% endif %}
+                {% block menu %}{% endblock %}
+            </ul>
+        </div>
     </div>
 </nav>
 <div class="container">
