--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -26,6 +26,9 @@
                 {% else %}
                     <li class="nav-item"><a href="{% url 'accounts:login' %}" class="nav-link">Log In</a></li>
                 {% endif %}
+                <li class="nav-item">
+                    <a href="{% url 'webapp:post_list' %}" class="nav-link">Post List</a>
+                </li>
                 {% block menu %}{% endblock %}
             </ul>
         </div>
