--- a/source/webapp/templates/post_list.html
+++ b/source/webapp/templates/post_list.html
@@ -1,22 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}Post List{% endblock %}
 {% block menu %}
-    <li class="nav-item">
-        <a href="{% url 'webapp:post_list' %}" class="nav-link">Post List</a>
-    </li>
+    {% if user.is_authenticated %}
+        <li class="nav-item">
+            <a href="{% url 'webapp:post_create' %}" class="nav-link">Create Post</a>
+        </li>
+    {% endif %}
 {% endblock %}
 {% block content %}
-        <div class="row">
-            {% for post in post_list %}
-                <div class="col-md-4">
-                    <div class="card mt-4" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ post.header }}</h5>
-                            <p class="card-text">{{ post.author }}</p>
-{#                            <a href="{% url 'webapp:food_detail' food.pk %}" class="btn btn-dark">See more</a>#}
-                        </div>
+    <div class="row">
+        {% for post in post_list %}
+            <div class="col-md-4">
+                <div class="card mt-4" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ post.header }}</h5>
+                        <p class="card-text">{{ post.author }}</p>
+                        <p class="card-text">{{ post.created_at }}</p>
+                        <a href="{% url 'webapp:post_detail' post.pk %}" class="btn btn-dark">See more</a>
                     </div>
                 </div>
-            {% endfor %}
-        </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %} %}
