--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -29,6 +29,9 @@
                 <li class="nav-item">
                     <a href="{% url 'webapp:post_list' %}" class="nav-link">Post List</a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'webapp:user_list' %}" class="nav-link">User List</a>
+                </li>
                 {% block menu %}{% endblock %}
             </ul>
         </div>
